# irc-bot

./: .gitignore  CurlEngine.cpp  CurlEngine.hpp  README.md  build_dependencies.sh  config.json.example  external_repositories.yaml  find_youtube_ids.cpp  find_youtube_ids.hpp  main.cpp  meson.build  net_stream.hpp  test_irc_stream.cpp
